--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 fastapi = "^0.103.2"
 uvicorn = "^0.23.2"
 pydantic-settings = "^2.0.3"
+sqlalchemy = "^2.0.21"
 
 
 [tool.poetry.group.test.dependencies]
